--- a/server/public/index.html
+++ b/server/public/index.html
@@ -30,6 +30,8 @@
             <tr>
               <th>Title</th>
               <th>Author</th>
+              <th>Actions</th>
+
             </tr>
           </thead>
           <tbody id="bookShelf">
